fix on small screen like macbook air

--- a/src/option/options.less
+++ b/src/option/options.less
@@ -27,7 +27,7 @@ body {
   }
 
   .nav-wrapper {
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 992px) {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -37,7 +37,7 @@ body {
       position: fixed;
       top: 20px;
 
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 992px) {
         bottom: 20px;
         top: auto;
         z-index: 9999;
